bundled_metadata/force-app/main/default/objects/Pep_Iris_Endpoint__mdt/Pep_Iris_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Pep Iris Endpoint</label>
    <pluralLabel>Pep Iris Endpoints</pluralLabel>
</CustomObject>