bundled_metadata/force-app/main/default/objects/Pep_Iris_Endpoint__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>