bundled_metadata/force-app/main/default/objects/Pep_Iris_Endpoint__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description
    >Environment code the Savvy mobile app matches against to pick the correct PEPIRiS URLs for the logged-in org. One record per environment: DEV, QA, PREPROD, PROD.</description>
    <label>Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>