bundled_metadata/force-app/main/default/objects/Pep_Iris_Endpoint__mdt/fields/FTS_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>FTS_Base_URL__c</fullName>
    <description
    >PEPIRiS FTS (save-images / BFF) base URL for this environment. Host only; the Savvy app appends the /api/v1/save-images/ path.</description>
    <label>FTS Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>