bundled_metadata/force-app/main/default/objects/Pep_Iris_Endpoint__mdt/fields/Inference_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Inference_Base_URL__c</fullName>
    <description
    >PEPIRiS Inference (processInference) base URL for this environment. Host only; the Savvy app appends the /cgf/pepiris-romot/v1/api/v1/inference/processInference/ path.</description>
    <label>Inference Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>